added Pantilt service definition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_message_files(
 add_service_files(
    FILES
    MoveTo.srv
+   PanTilt.srv
 )
 
 ## Generate added messages and services with any dependencies listed here
