added latest service definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ add_message_files(
 add_service_files(
    FILES
    MoveTo.srv
+	 AvatarRotation.srv
    PanTilt.srv
+   Command.srv
 )
 
 ## Generate added messages and services with any dependencies listed here
