--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,19 @@ project(iai_avatar_msgs)
 find_package(
 	catkin REQUIRED COMPONENTS
 	std_msgs
-  geometry_msgs
+        geometry_msgs
 	message_generation
+        actionlib_msgs
+        genmsg
 )
 
 ## Generate messages in the 'msg' folder
 add_message_files(
    FILES
 )
+
+## Generate actions in the 'action' folder
+add_action_files(DIRECTORY action FILES QnA.action)
 
 ## Generate services in the 'srv' folder
 add_service_files(
@@ -31,6 +36,7 @@ add_service_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
    DEPENDENCIES
+   actionlib_msgs
    std_msgs
    geometry_msgs
 )
@@ -38,6 +44,7 @@ generate_messages(
 catkin_package(
   CATKIN_DEPENDS
   message_runtime
+  actionlib_msgs
   std_msgs
   geometry_msgs
 )
