--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,11 @@
   <buildtool_depend>catkin</buildtool_depend>
 
 
+  <build_depend>actionlib_msgs</build_depend>
+  <build_export_depend>actionlib_msgs</build_export_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+
+
   <export>
 
   </export>
