--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,8 @@
   <build_export_depend>actionlib_msgs</build_export_depend>
   <exec_depend>actionlib_msgs</exec_depend>
 
+  <build_depend>actionlib</build_depend>
+  <exec_depend>actionlib</exec_depend>
 
   <export>
 
